--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -9,7 +9,7 @@
     android:padding="20dp">
 
     <ImageView
-        android:id="@+id/image_profile"
+        android:id="@+id/userProfileImage"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:clickable="true"
