--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,34 +8,35 @@
     tools:context=".ui.register.RegisterActivity">
 
     <ImageView
+        android:id="@+id/registerImageView"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/user"
-        android:id="@+id/registerImageView"
         android:layout_marginTop="40dp"
         android:layout_marginBottom="20dp"
+        android:src="@drawable/user"
         app:layout_constraintBottom_toTopOf="@+id/text_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <EditText
         android:id="@+id/text_name"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_marginTop="60dp"
         android:layout_marginBottom="16dp"
-        android:layout_width="match_parent"
-        android:paddingLeft="5dp"
-        android:textColor="#000000"
-        android:layout_height="50dp"
         android:background="@drawable/custom_edit"
+        android:drawableStart="@drawable/ic_user"
         android:ems="10"
         android:hint="Name"
-        android:drawableStart="@drawable/ic_user"
+        android:imeOptions="actionNext"
         android:importantForAutofill="no"
+        android:paddingLeft="5dp"
         android:textAlignment="center"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/text_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,18 +44,19 @@
 
     <EditText
         android:id="@+id/text_email"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="15dp"
-        android:layout_width="match_parent"
-        android:paddingLeft="5dp"
-        android:textColor="#000000"
-        android:layout_height="50dp"
         android:background="@drawable/custom_edit"
+        android:drawableStart="@drawable/ic_mail"
         android:ems="10"
         android:hint="Email"
-        android:drawableStart="@drawable/ic_mail"
+        android:imeOptions="actionNext"
         android:importantForAutofill="no"
+        android:paddingLeft="5dp"
         android:textAlignment="center"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/text_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,19 +64,19 @@
 
     <EditText
         android:id="@+id/text_password"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="15dp"
-        android:layout_width="match_parent"
-        android:paddingLeft="5dp"
-        android:textColor="#000000"
-        android:layout_height="50dp"
-        android:inputType="textPassword"
-        android:hint="Password"
-        android:ems="10"
         android:background="@drawable/custom_edit"
         android:drawableStart="@drawable/ic_lock"
+        android:ems="10"
+        android:hint="Password"
         android:importantForAutofill="no"
+        android:inputType="textPassword"
+        android:paddingLeft="5dp"
         android:textAlignment="center"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/text_confirmPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,19 +84,19 @@
 
     <EditText
         android:id="@+id/text_confirmPassword"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="15dp"
-        android:layout_width="match_parent"
-        android:paddingLeft="5dp"
-        android:textColor="#000000"
-        android:layout_height="50dp"
-        android:hint="Confirm Password"
-        android:inputType="textPassword"
-        android:ems="10"
         android:background="@drawable/custom_edit"
         android:drawableStart="@drawable/ic_lock"
+        android:ems="10"
+        android:hint="Confirm Password"
         android:importantForAutofill="no"
+        android:inputType="textPassword"
+        android:paddingLeft="5dp"
         android:textAlignment="center"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/btn_register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -106,12 +108,12 @@
         android:layout_height="50dp"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="2dp"
+        android:background="@drawable/custom_button"
         android:onClick="onRegister"
         android:text="Register"
         android:textColor="#FAF6F6"
         android:textSize="20dp"
         android:textStyle="bold"
-        android:background="@drawable/custom_button"
         app:layout_constraintBottom_toTopOf="@+id/loginTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
