--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,11 +36,12 @@
         android:drawableStart="@drawable/ic_mail"
         android:ems="10"
         android:hint="Email"
+        android:imeOptions="actionNext"
         android:importantForAutofill="no"
         android:paddingLeft="5dp"
+        android:singleLine="true"
         android:textAlignment="center"
         android:textColor="#000000"
-        android:imeOptions="actionNext"
         app:layout_constraintBottom_toTopOf="@+id/password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
