--- a/app/src/main/res/layout/activity_answers2.xml
+++ b/app/src/main/res/layout/activity_answers2.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".answers.AnswersActivity">
 
+    <!-- TODO: Update blank fragment layout -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/answer_recyclerView"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         tools:listitem="@layout/row_answer"
-        tools:itemCount="3"
-        android:layout_height="match_parent">
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
-    </androidx.recyclerview.widget.RecyclerView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
