fixed home back press and added email verification while registering and logging in

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -26,16 +26,19 @@
         android:id="@+id/text_name"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="60dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/custom_edit"
         android:drawableStart="@drawable/ic_user"
+        android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Name"
         android:imeOptions="actionNext"
-        android:importantForAutofill="no"
-        android:paddingLeft="5dp"
-        android:textAlignment="center"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:textAlignment="textStart"
         android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/text_email"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,16 +49,19 @@
         android:id="@+id/text_email"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="12dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="15dp"
         android:background="@drawable/custom_edit"
         android:drawableStart="@drawable/ic_mail"
+        android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Email"
         android:imeOptions="actionNext"
-        android:importantForAutofill="no"
-        android:paddingLeft="5dp"
-        android:textAlignment="center"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:textAlignment="textStart"
         android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/text_password"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,16 +72,20 @@
         android:id="@+id/text_password"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="12dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="15dp"
         android:background="@drawable/custom_edit"
         android:drawableStart="@drawable/ic_lock"
+        android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Password"
-        android:importantForAutofill="no"
         android:inputType="textPassword"
+        android:paddingStart="20dp"
         android:paddingLeft="5dp"
-        android:textAlignment="center"
+        android:paddingEnd="20dp"
+        android:textAlignment="textStart"
         android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/text_confirmPassword"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,16 +96,20 @@
         android:id="@+id/text_confirmPassword"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="15dp"
         android:background="@drawable/custom_edit"
         android:drawableStart="@drawable/ic_lock"
+        android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Confirm Password"
         android:importantForAutofill="no"
         android:inputType="textPassword"
-        android:paddingLeft="5dp"
-        android:textAlignment="center"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:textAlignment="textStart"
         android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/btn_register"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,11 +118,13 @@
 
     <Button
         android:id="@+id/btn_register"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="2dp"
         android:background="@drawable/custom_button"
+        android:paddingStart="30dp"
+        android:paddingEnd="30dp"
         android:text="Register"
         android:textColor="#FAF6F6"
         android:textSize="20dp"
@@ -125,7 +141,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
         android:text="Already Registered ? Login Here!"
-        android:textColor="#000000"
+        android:textColor="#717171"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
