--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,17 +30,20 @@
         android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="25dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/custom_edit"
         android:drawableStart="@drawable/ic_mail"
+        android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Email"
         android:imeOptions="actionNext"
-        android:importantForAutofill="no"
-        android:paddingLeft="5dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
         android:singleLine="true"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/password"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,16 +54,19 @@
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="2dp"
         android:background="@drawable/custom_edit"
         android:drawableStart="@drawable/ic_lock"
+        android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Password"
-        android:importantForAutofill="no"
         android:inputType="textPassword"
+        android:paddingStart="20dp"
         android:paddingLeft="5dp"
-        android:textAlignment="center"
+        android:paddingEnd="20dp"
+        android:textAlignment="textStart"
         android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/btn_login"
         app:layout_constraintEnd_toEndOf="parent"
