--- a/app/src/main/res/layout/activity_note_pdf.xml
+++ b/app/src/main/res/layout/activity_note_pdf.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".books.NotePdfActivity">
 
-    <androidx.appcompat.widget.Toolbar
+    <Toolbar
         android:id="@+id/pdfToolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
