fixed enter key issuse in keyboard for moving to next tab

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -33,6 +33,8 @@
         android:background="@drawable/custom_edit"
         android:drawableStart="@drawable/ic_user"
         android:drawablePadding="10dp"
+        android:singleLine="true"
+        android:nextFocusDown="@id/text_email"
         android:ems="10"
         android:hint="Name"
         android:imeOptions="actionNext"
@@ -56,6 +58,8 @@
         android:background="@drawable/custom_edit"
         android:drawableStart="@drawable/ic_mail"
         android:drawablePadding="10dp"
+        android:singleLine="true"
+        android:nextFocusDown="@id/text_password"
         android:ems="10"
         android:hint="Email"
         android:imeOptions="actionNext"
